--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -22,12 +22,13 @@ management:
       # 是否展示健康检查详情
       show-details: always
 
-
 eureka:
   client:
     service-url:
       # 指定eureka server通信地址，注意/eureka/小尾巴不能少
       defaultZone: http://localhost:8761/eureka/
+      # 注册到eureka集群
+      # defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
   instance:
     # 是否注册IP到eureka server，如不指定或设为false，那就会注册主机名到eureka server
     prefer-ip-address: true
