--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
     <modules>
         <module>microservice-provider-user</module>
         <module>microservice-consumer-movie</module>
+        <module>microservice-consumer-movie-ribbon</module>
         <module>microservice-discovery-eureka</module>
+        <module>microservice-discovery-eureka-ha</module>
     </modules>
 
 
