--- a/feign-upload-client/src/main/resources/application.yml
+++ b/feign-upload-client/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8010
+  port: 8011
 spring:
   application:
     # 指定注册到eureka server上的服务名称
-    name: microservice-consumer-movie
+    name: feign-upload-client
 
 eureka:
   client:
@@ -13,8 +13,3 @@ eureka:
   instance:
     # 是否注册IP到eureka server，如不指定或设为false，那就会注册主机名到eureka server
     prefer-ip-address: true
-
-#配置负载均衡规则，默认为轮训规则
-microservice-provider-user:
-  ribbon:
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
