--- a/microservice-consumer-movie-feign/pom.xml
+++ b/microservice-consumer-movie-feign/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springcloud-demo</artifactId>
         <groupId>com.huowolf</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.huowolf</groupId>
-    <artifactId>microservice-consumer-movie</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>microservice-consumer-movie-feign</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -38,6 +37,10 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- 引入spring cloud的依赖 -->
