--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>microservice-consumer-movie-ribbon</module>
         <module>microservice-discovery-eureka</module>
         <module>microservice-discovery-eureka-ha</module>
+        <module>microservice-consumer-movie-feign</module>
+        <module>feign-file-server</module>
+        <module>feign-upload-client</module>
     </modules>
 
 
